Bug 390214 - Dolphin random crash
Summary: Dolphin random crash
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcoreaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords: drkonqi
: 390491 390786 390916 390944 391021 391216 391338 391363 391378 391653 391688 392402 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-10 13:06 UTC by Tony
Modified: 2018-04-06 14:01 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2018-02-10 13:06:15 UTC
Application: dolphin (18.03.70)

Qt Version: 5.10.0
Frameworks Version: 5.43.0
Operating System: Linux 4.15.1-1-default x86_64
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed:

I had 1 instance of Dolphin open with 3 tabs. The crash occured while i was downloading/installing a Wine package for PlayOnLinux.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f3fff36d900 (LWP 1934))]

Thread 4 (Thread 0x7f3fd506f700 (LWP 1938)):
#0  g_mutex_unlock (mutex=0x7f3fd0000be0) at gthread-posix.c:1348
#1  0x00007f3ff199d658 in g_main_context_prepare (context=context@entry=0x7f3fd0000be0, priority=priority@entry=0x7f3fd506eba0) at gmain.c:3438
#2  0x00007f3ff199e03b in g_main_context_iterate (context=context@entry=0x7f3fd0000be0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3848
#3  0x00007f3ff199e21c in g_main_context_iteration (context=0x7f3fd0000be0, may_block=1) at gmain.c:3929
#4  0x00007f3ff8daa78b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f3ff8d516ba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007f3ff8b788da in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#7  0x00007f3ff8b7d8d0 in QThreadPrivate::start(void*) () from /usr/lib64/libQt5Core.so.5
#8  0x00007f3ff3de7558 in start_thread (arg=0x7f3fd506f700) at pthread_create.c:465
#9  0x00007f3ffebf872f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f3fe52ff700 (LWP 1936)):
#0  0x00007f3ffebedf8b in __GI___poll (fds=0x7f3fd8002de0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f3ff199e109 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7f3fd8002de0, timeout=<optimized out>, context=0x7f3fd8000be0) at gmain.c:4169
#2  g_main_context_iterate (context=context@entry=0x7f3fd8000be0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3863
#3  0x00007f3ff199e21c in g_main_context_iteration (context=0x7f3fd8000be0, may_block=1) at gmain.c:3929
#4  0x00007f3ff8daa78b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f3ff8d516ba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007f3ff8b788da in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#7  0x00007f3ff91cfbd5 in QDBusConnectionManager::run() () from /usr/lib64/libQt5DBus.so.5
#8  0x00007f3ff8b7d8d0 in QThreadPrivate::start(void*) () from /usr/lib64/libQt5Core.so.5
#9  0x00007f3ff3de7558 in start_thread (arg=0x7f3fe52ff700) at pthread_create.c:465
#10 0x00007f3ffebf872f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f3fe78a7700 (LWP 1935)):
#0  0x00007f3ffebedf8b in __GI___poll (fds=fds@entry=0x7f3fe78a6bc8, nfds=nfds@entry=1, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f3ff12cd387 in poll (__timeout=-1, __nfds=1, __fds=0x7f3fe78a6bc8) at /usr/include/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x55693e7e1ad0, cond=cond@entry=0x55693e7e1b10, vector=vector@entry=0x0, count=count@entry=0x0) at xcb_conn.c:479
#3  0x00007f3ff12cf17a in xcb_wait_for_event (c=0x55693e7e1ad0) at xcb_in.c:693
#4  0x00007f3fea8b58d9 in QXcbEventReader::run() () from /usr/lib64/libQt5XcbQpa.so.5
#5  0x00007f3ff8b7d8d0 in QThreadPrivate::start(void*) () from /usr/lib64/libQt5Core.so.5
#6  0x00007f3ff3de7558 in start_thread (arg=0x7f3fe78a7700) at pthread_create.c:465
#7  0x00007f3ffebf872f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f3fff36d900 (LWP 1934)):
[KCrash Handler]
#6  QConcatenable<QStringBuilder<QString, QLatin1Char> >::size (p=...) at /usr/include/qt5/QtCore/qstringbuilder.h:358
#7  QConcatenable<QStringBuilder<QStringBuilder<QString, QLatin1Char>, QString> >::size (p=...) at /usr/include/qt5/QtCore/qstringbuilder.h:358
#8  QStringBuilder<QStringBuilder<QString, QLatin1Char>, QString>::convertTo<QString> (this=<optimized out>) at /usr/include/qt5/QtCore/qstringbuilder.h:111
#9  QStringBuilder<QStringBuilder<QString, QLatin1Char>, QString>::operator QString (this=<optimized out>) at /usr/include/qt5/QtCore/qstringbuilder.h:131
#10 KDirWatchPrivate::inotifyEventReceived (this=0x55693ecfd660) at /usr/src/debug/kcoreaddons-5.43.0git.20180208T001404~49dc2cf-48.1.x86_64/src/lib/io/kdirwatch.cpp:322
#11 0x00007f3ff8d80fca in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#12 0x00007f3ff8d8cec8 in QSocketNotifier::activated(int, QSocketNotifier::QPrivateSignal) () from /usr/lib64/libQt5Core.so.5
#13 0x00007f3ff8d8d232 in QSocketNotifier::event(QEvent*) () from /usr/lib64/libQt5Core.so.5
#14 0x00007f3ff9d5ff0c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#15 0x00007f3ff9d67204 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#16 0x00007f3ff8d52ea8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#17 0x00007f3ff8dab36d in socketNotifierSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/libQt5Core.so.5
#18 0x00007f3ff199df57 in g_main_dispatch (context=0x7f3fe0004fc0) at gmain.c:3142
#19 g_main_context_dispatch (context=context@entry=0x7f3fe0004fc0) at gmain.c:3795
#20 0x00007f3ff199e190 in g_main_context_iterate (context=context@entry=0x7f3fe0004fc0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3868
#21 0x00007f3ff199e21c in g_main_context_iteration (context=0x7f3fe0004fc0, may_block=1) at gmain.c:3929
#22 0x00007f3ff8daa76f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#23 0x00007f3fea936fb1 in QPAEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5XcbQpa.so.5
#24 0x00007f3ff8d516ba in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#25 0x00007f3ff8d5a1f4 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#26 0x00007f3ffef064f7 in kdemain (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/dolphin-18.03.80git.20180205T192544~9fbf7a0b6-66.1.x86_64/src/main.cpp:150
#27 0x00007f3ffeb20f4a in __libc_start_main (main=0x55693d5067e0 <main>, argc=2, argv=0x7ffdbf0f5b58, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffdbf0f5b48) at ../csu/libc-start.c:308
#28 0x000055693d50681a in _start () at ../sysdeps/x86_64/start.S:120

Reported using DrKonqi
Comment 1 Elvis Angelaccio 2018-02-24 12:15:42 UTC
*** Bug 390786 has been marked as a duplicate of this bug. ***
Comment 2 Elvis Angelaccio 2018-02-24 12:15:54 UTC
*** Bug 390944 has been marked as a duplicate of this bug. ***
Comment 3 Elvis Angelaccio 2018-02-24 12:16:40 UTC
Looks like it could be a crash in kdirwatch.
Comment 4 Elvis Angelaccio 2018-02-24 12:26:21 UTC
*** Bug 390916 has been marked as a duplicate of this bug. ***
Comment 5 Elvis Angelaccio 2018-02-25 12:32:43 UTC
*** Bug 391021 has been marked as a duplicate of this bug. ***
Comment 6 Elvis Angelaccio 2018-02-28 22:15:18 UTC
*** Bug 391216 has been marked as a duplicate of this bug. ***
Comment 7 Elvis Angelaccio 2018-03-03 14:58:14 UTC
*** Bug 391338 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2018-03-05 19:49:38 UTC
*** Bug 391363 has been marked as a duplicate of this bug. ***
Comment 9 Milian Wolff 2018-03-05 19:58:22 UTC
Git commit b8e3a72aa7ed064a840a0748b020aa758aa8c9d6 by Milian Wolff.
Committed on 05/03/2018 at 19:57.
Pushed by mwolff into branch 'master'.

Cleanup m_inotify_wd_to_entry before invalidating Entry pointers

The Entry pointers stored in this pointer reference nodes in
m_mapEntries. So we have to ensure the m_inotify_wd_to_entry hash
does not contain dangling pointers - remove any entries therein
before removing from m_mapEntries.

M  +3    -0    src/lib/io/kdirwatch.cpp

https://commits.kde.org/kcoreaddons/b8e3a72aa7ed064a840a0748b020aa758aa8c9d6
Comment 10 Elvis Angelaccio 2018-03-06 22:16:03 UTC
*** Bug 391378 has been marked as a duplicate of this bug. ***
Comment 11 Kai Uwe Broulik 2018-03-07 11:10:04 UTC
*** Bug 390491 has been marked as a duplicate of this bug. ***
Comment 12 Elvis Angelaccio 2018-03-10 11:39:13 UTC
*** Bug 391653 has been marked as a duplicate of this bug. ***
Comment 13 Elvis Angelaccio 2018-03-11 08:58:59 UTC
*** Bug 391688 has been marked as a duplicate of this bug. ***
Comment 14 Kai Uwe Broulik 2018-03-27 12:09:47 UTC
*** Bug 392402 has been marked as a duplicate of this bug. ***