Cleanup m_inotify_wd_to_entry before invalidating Entry pointers

The Entry pointers stored in this pointer reference nodes in
m_mapEntries. So we have to ensure the m_inotify_wd_to_entry hash
does not contain dangling pointers - remove any entries therein
before removing from m_mapEntries.

BUG: 390214